k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-app-service
spec:
  type: NodePort
  selector:
    app: ai-app
  ports:
    - name: http
      port: 80
      targetPort: 5000
      nodePort: 30007
