k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:

          # ✅ APP
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: ai-app-service
                port:
                  number: 80

          # ✅ METRICS
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: ai-app-service
                port:
                  number: 80

          # ✅ GRAFANA
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
